# multi-agent-collaboration-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: README.md  STATE.md
.agents/improve-this-kit/: README.md
.agents/improve-this-kit/feedback/: README.md
.agents/improve-this-kit/proposals/: README.md
.agents/skills/: README.md  registry.toml
.agents/skills/common/improve-this-kit/: SKILL.md  reference.md
.agents/skills/common/multi-agent-handoff/: SKILL.md
.agents/skills/graphics/paper-framework-figure-studio-pro/: CHANGELOG.md  LICENSE  README.md  RELEASE_VALIDATION_v3.2.15b.json  RELEASE_VALIDATION_v3.2.15b.md  SKILL.md  SKILL_CREATOR_PACKAGE_REPORT.md  VERSION  metadata.json
.agents/skills/graphics/paper-framework-figure-studio-pro/agents/: openai.yaml
.agents/skills/graphics/paper-framework-figure-studio-pro/examples/: example-bootstrap-plan-only-turn.md  example-s0-paper-foundation-turn.md  example-s1-figure-strategy-turn.md  example-s2-sketch-explore-image-turn.md  example-s3-direction-select-turn.md  example-s4-candidate-brief-turn.md  example-s5-candidate-image-turn.md
.agents/skills/graphics/paper-framework-figure-studio-pro/publish/: listing_long.md  listing_short.md  release_checklist.md  starter_messages.md
.agents/skills/graphics/paper-framework-figure-studio-pro/references/: academic-framework-hierarchy-and-asset-mirroring-policy-v3210.md  acm-ieee-aaai-line-art-schematic-style-policy-v3215c.md  architecture-governance-contract.md  atlas-board-display-policy.md  builder-time-acquisition-report.md  candidate-artifact-id-coherence-policy-v3215.md  candidate-issue-ledger-and-caption-burden-policy-v324.md  chatgpt-web-checkpoint-bundle-policy.md  checkpoint-response-and-repair-gate-policy-v3215b.md  choice-prompt-policy.md  complete-framework-candidate-eligibility-policy-v321.md  connector-provenance-and-area-budget-policy-v315-hotfix.md  consensus-space-visual-balance-policy-v315.md  continue-next-action-policy-v316.md  (+75 more)
.agents/skills/review/review-gate/: SKILL.md
.agents/skills/workflows/repo-adaptation/: SKILL.md
.agents/templates/: agent_state.md  feedback.md  proposal.md  retro.md  skill.md  task_state.md
.cursor/rules/: multi-agent.mdc
docs/: external_download.md
src/mackit/: __init__.py  cli.py
src/multi_agent_collaboration_kit/: cli.py
src/prepare_agent_cooperation_project/: __init__.py  cli.py
tests/: test_idempotent_install.py
tests/fixtures/: README.md
(+1259 files in other folders)
