[project]
name = "mackit"
version = "0.1.3"
description = "Tiny agent-ready project initializer and adapter."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mackit contributors" }]
keywords = ["agents", "AGENTS.md", "Claude", "Cursor", "Codex", "handoff"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]

[project.urls]
Homepage = "https://github.com/Suchenl/multi-agent-collaboration-kit"
Repository = "https://github.com/Suchenl/multi-agent-collaboration-kit"

[project.scripts]
mackit = "mackit.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/.agents/skills",
  "/docs",
  "/src",
  "/tests",
  "/INSTALL_FOR_AGENTS.md",
  "/LICENSE",
  "/README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mackit"]

[tool.hatch.build.targets.wheel.force-include]
".agents/skills" = "mackit/resources/skills"

